# Image-Text-Extractor-Script

./: .gitignore  README.md  pyproject.toml  scanner.py  textcleaner
